insert building table - complete

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,4 +58,28 @@
     <string name="tenant_list">لیست مستأجرین</string>
     <string name="add_new_tenant">اضافه کردن مستأجر جدید</string>
     <string name="add_new_owner">اضافه کردن مالک جدید</string>
+    <string name="first_name">نام</string>
+    <string name="last_name">نام خانوادگی</string>
+    <string name="mobile_number">شماره همراه</string>
+    <string name="cancel">انصراف</string>
+    <string name="start_date">تاریخ شروع</string>
+    <string name="end_date">تاریخ پایان</string>
+    <string name="status">وضعیت</string>
+    <string name="active">فعال</string>
+    <string name="inactive">غیرفعال</string>
+    <string name="residential">مسکونی</string>
+    <string name="commercial">تجاری</string>
+    <string name="industrial">صنعتی</string>
+    <string name="villa">ویلایی</string>
+    <string name="apartment">آپارتمانی</string>
+    <string name="add_new_unit">اضافه کردن واحد جدید</string>
+    <string name="number_of_rooms">تعداد اتاق ها</string>
+    <string name="owner">مالک</string>
+    <string name="units_list">لیست واحدها</string>
+    <string name="unit_name">نام واحد</string>
+    <string name="unit_number">شماره واحد</string>
+    <string name="area">متراژ</string>
+    <string name="number_of_tenants">تعداد افراد</string>
+    <string name="personal_information">اطلاعات شخصی</string>
+    <string name="lease_information">"اطلاعات اجاره "</string>
 </resources>
