--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,8 +55,8 @@
     <string name="back">قبلی</string>
     <string name="next">بعدی</string>
     <string name="owners_list">لیست مالکین</string>
-    <string name="tenant_list">لیست مستأجرین</string>
-    <string name="add_new_tenant">اضافه کردن مستأجر جدید</string>
+    <string name="tenant_list">لیست ساکنین</string>
+    <string name="add_new_tenant">اضافه کردن ساکن جدید</string>
     <string name="add_new_owner">اضافه کردن مالک جدید</string>
     <string name="first_name">نام</string>
     <string name="last_name">نام خانوادگی</string>
@@ -92,7 +92,7 @@
     <string name="incomes">درآمدها</string>
     <string name="no_earnings_recorded">هیچ درآمدی ثبت نشده است</string>
     <string name="no_costs_recorded">هیچ هزینه ای ثبت نشده است.</string>
-    <string name="tenants">مستأجرین</string>
+    <string name="tenants">ساکنین</string>
     <string name="rent">اجاره</string>
     <string name="utilities">قبوض</string>
     <string name="maintenance">تعمیرات</string>
@@ -123,7 +123,7 @@
     <string name="hezar_toman">هزار تومان</string>
     <string name="milion_toman">میلیون تومان</string>
     <string name="automatic_charge">محاسبه شارژ به صورت اتوماتیک انجام شود.</string>
-    <string name="nafari">نفری</string>
+    <string name="nafari">نفرات</string>
     <string name="acount_base">مبنای محاسبه</string>
     <string name="base_amount">مبلغ واحد</string>
     <string name="not_account">شما حساب کاربری فعال ندارید؟</string>
@@ -140,9 +140,13 @@
     <string name="building">ساختمان</string>
     <string name="unit">واحد</string>
     <string name="fixed">ثابت</string>
-    <string name="tenant">مستأجر</string>
+    <string name="tenant">ساکن</string>
     <string name="title_activity_main">MainActivity</string>
     <string name="title_home">Home</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
+    <string name="fixed_amount">مبلغ شارژ</string>
+    <string name="setting">تنظیمات</string>
+    <string name="upload">آپلود مدارک</string>
+    <string name="number_of_parking">پارکینگ</string>
 </resources>
