--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -207,4 +207,46 @@
     <string name="payment_done">پرداخت شده</string>
     <string name="payment">پرداخت</string>
     <string name="cost_name">عنوان هزینه</string>
+    <string name="farvardin">فروردین</string>
+    <string name="ordibehesht">اردیبهشت</string>
+    <string name="khordad">خرداد</string>
+    <string name="tir">تیر</string>
+    <string name="mordad">مرداد</string>
+    <string name="shahrivar">شهریور</string>
+    <string name="mehr">مهر</string>
+    <string name="aban">آبان</string>
+    <string name="azar">آذر</string>
+    <string name="dey">دی</string>
+    <string name="bahman">بهمن</string>
+    <string name="esfand">اسفند</string>
+    <string name="apply_authorization">اعطای دسترسی</string>
+    <string name="guest_message">Sign in to access all features and manage your properties</string>
+    <string name="homepage_display">صفحه اصلی</string>
+    <string name="homepage_desc">نمایش لیست ساختمان ها</string>
+    <string name="building_form_display">فرم ایجاد ساختمان</string>
+    <string name="building_form_desc">ایجاد ساختمان با استفاده از مراحل(فرم اولیه، افزودن به واحدها،..)</string>
+    <string name="building_profile_display">پروفایل ساختمان</string>
+    <string name="building_profile_desc">نمایش اطلاعات ساختمان از جمله اطلاعات اولیه، واحدها، ساکنین، ...</string>
+    <string name="cost_management_display">هزینه ها</string>
+    <string name="cost_management_desc">مدیریت انواع هزینه ها</string>
+    <string name="earning_management_display">درآمدها</string>
+    <string name="earning_management_desc">مدیریت انواع درآمدها</string>
+    <string name="building_type_display">انواع ساختمان</string>
+    <string name="building_type_desc">مدیریت انواع ساختمان</string>
+    <string name="building_usage_display">کاربری ساختمان</string>
+    <string name="building_usage_desc">مدیریت کاربری ساختمان</string>
+    <string name="guest_display">صفحه مهمان</string>
+    <string name="guest_desc">مدیریت صفحه مهمان</string>
+    <string name="unit_detail_display">صفحه واحدها</string>
+    <string name="unit_detail_desc">اطلاعات واحدهای مربوط به ساختمان از جمله اطلاعات اولیه، بدهی ها، پرداختی ها...</string>
+    <string name="user_management">مدیریت کاربر</string>
+    <string name="all_building">لیست کلی ساختمان ها</string>
+    <string name="user_building">لیست ساختمان های کاربر</string>
+    <string name="add_building_btn">دکمه ایجاد ساختمان</string>
+    <string name="buildings_info">اطلاعات اولیه</string>
+    <string name="buildings_info_page">صفحه اطلاعات اولیه</string>
+    <string name="units_page">صفحه اطلاعات واحدها</string>
+    <string name="owners_page">صفحه اطلاعات مالکین</string>
+    <string name="tenants_page">صفحه اطلاعات ساکنین</string>
+    <string name="cost_page">صفحه اطلاعات مالی</string>
 </resources>
