Sign up - Owners Profile - Financial improvement

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -256,4 +256,32 @@
     <string name="add_new_earning">"ثبت درآمد برای "</string>
     <string name="earning_title">عنوان درآمد</string>
     <string name="doesnt_have">ندارد</string>
+    <string name="add_auth">ثبت دسترسی</string>
+    <string name="first_level">سطح یک</string>
+    <string name="second_level">سطح دو</string>
+    <string name="permision_type">نوع دسترسی</string>
+    <string name="user_info">اطلاعات کاربر</string>
+    <string name="permisions">دسترسی ها</string>
+    <string name="role">نقش</string>
+    <string name="fund_flag_positive_effect">موثر در بودجه</string>
+    <string name="responsible">پرداخت کننده</string>
+    <string name="cost_name_exists">هزینه وارد شده تکراری است.</string>
+    <string name="invalid_email">فرمت ایمیل نادرست است.</string>
+    <string name="invalid_phone_number">فرمت شماره تماس نادرست است.</string>
+    <string name="invalid_mobile_number">فرمت شماره موبایل نادرست است.</string>
+    <string name="ask_fill_costs_by_building">تمایل به تکمیل اطلاعات شارژ و رهن و اجاره واحد ساختمان دارید؟</string>
+    <string name="tenant_period_conflict">در این بازه یک ساکن فعال تعریف شده است.</string>
+    <string name="owner_details">پروفایل مالک</string>
+    <string name="sign_up">ثبت نام</string>
+    <string name="password">رمز</string>
+    <string name="password_too_short">پیچیدگی پسورد کم</string>
+    <string name="manager">مدیر ساختمان</string>
+    <string name="dang">دانگ</string>
+    <string name="invalid_dang">مقدار وارد شده نامعتبر است.</string>
+    <string name="loading">در حال بارگذاری</string>
+    <string name="no_email">ایمیلی برای این مالک ثبت نشده است.</string>
+    <string name="no_phone">شماره تماسی ثبت نشده است.</string>
+    <string name="logout">خروج از برنامه</string>
+    <string name="success_pay">پرداخت با موفقیت انجام شد</string>
+    <string name="no_tenants_found">هیچ ساکنی برای این واحد تعریف نشده است</string>
 </resources>
